Reworked some old mappings